improve package listing

--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -57,5 +57,5 @@ jobs:
         working-directory: aov
 
       - name: List azure-openapi-validator packages
-        run: find . -name *.tgz
+        run: find . -name *.tgz -exec du -h {} +
         working-directory: aov/packages
