Fix namespace to azure.ai.textanalytics (#37252)
* fix namespace to azure.ai.textanalytics

* fix namespace to azure.ai.textanalytics

* added @useDependency(Azure.Core.Versions.v1_0_Preview_2)

--- a/specification/cognitiveservices/Language.AnalyzeText/tspconfig.yaml
+++ b/specification/cognitiveservices/Language.AnalyzeText/tspconfig.yaml
@@ -22,7 +22,7 @@ options:
   "@azure-tools/typespec-python":
     package-name: "azure-ai-textanalytics"
     package-dir: "azure-ai-textanalytics"
-    namespace: "azure.ai.language.text"
+    namespace: "azure.ai.textanalytics"
     generate-test: true
     generate-sample: true
     flavor: "azure"
