fix specs dep install

--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -68,7 +68,7 @@ jobs:
         working-directory: ${{ runner.temp }}
 
       - name: Install specs deps
-        uses: ./.github/actions/setup-node-install-deps
+        uses: ./specs/.github/actions/setup-node-install-deps
         with:
           working-directory: specs
 
