checkout test spec

--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -23,6 +23,8 @@ jobs:
           path: specs
           sparse-checkout: |
             .github
+            specification/common-types
+            specification/widget
 
       - name: Checkout azure-openapi-validator@${{ inputs.ref }}
         uses: actions/checkout@v4
