--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -322,17 +322,10 @@ stages:
               -PRBody "$(GeneratedSDKInformation)  $(ReleasePlanInfo)"
               -OpenAsDraft $true
 
-        - pwsh: |
-            Write-Host "Release Info: $(ReleasePlanInfo)"
-            $prStatus = 'Failed to generate SDK.'
-            Write-Host "##vso[task.setvariable variable=SdkPrStatus]$prStatus"
-          displayName: 'Set PR generation status'
-          condition: Failed()
-
         - ${{ if ne(parameters.ReleasePlanWorkItemId, 0) }}:
           - task: AzureCLI@2
             displayName: Link pull request to release plan
-            condition: and(succeededOrFailed(), eq(variables['HasChanges'], 'true'), not(endsWith(variables['SdkRepoName'], '-pr')))
+            condition: and(succeeded(), eq(variables['HasChanges'], 'true'), not(endsWith(variables['SdkRepoName'], '-pr')))
             continueOnError: true
             inputs:
               azureSubscription: opensource-api-connection
@@ -342,7 +335,22 @@ stages:
               arguments: >
                 -ReleasePlanWorkItemId ${{ parameters.ReleasePlanWorkItemId }}
                 -PullRequestUrl "https://github.com/Azure/$(SdkRepoName)/pull/$(Submitted.PullRequest.Number)"
-                -Status "$(SdkPrStatus)"
+                -Status "draft"
+                -SdkRepoName "$(SdkRepoName)"
+
+          - task: AzureCLI@2
+            displayName: Update SDK generation status as failed
+            condition: and(Failed(), not(endsWith(variables['SdkRepoName'], '-pr')))
+            continueOnError: true
+            inputs:
+              azureSubscription: opensource-api-connection
+              scriptType: pscore
+              scriptLocation: scriptPath
+              scriptPath: $(SpecRepoDirectory)/eng/scripts/Update-PullRequest-In-ReleasePlan.ps1
+              arguments: >
+                -ReleasePlanWorkItemId ${{ parameters.ReleasePlanWorkItemId }}
+                -PullRequestUrl ""
+                -Status "Failed to generate SDK."
                 -SdkRepoName "$(SdkRepoName)"
 
       - ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
