--- a/specification/keyvault/cspell.yaml
+++ b/specification/keyvault/cspell.yaml
@@ -30,6 +30,7 @@ words:
   - setsas
   - subpackage
   - upns
+  - KWPAD
 overrides:
   - filename: '**/specification/keyvault/data-plane/Microsoft.KeyVault/**/keyvault.json'
     words:
