add v2025_07_01_preview, rename QuotaItem

--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
@@ -351,7 +351,7 @@
         "tags": [
           "SubscriptionQuotaItems"
         ],
-        "description": "Get the default and current subscription quota limit",
+        "description": "Get the default and current quota limit",
         "parameters": [
           {
             "$ref": "../../../../../common-types/resource-management/v6/types.json#/parameters/ApiVersionParameter"
@@ -10767,11 +10767,11 @@
     },
     "SubscriptionQuotaItem": {
       "type": "object",
-      "description": "Information regarding Subscription Quota Item.",
+      "description": "Information regarding Quota Item.",
       "properties": {
         "properties": {
           "$ref": "#/definitions/SubscriptionQuotaItemProperties",
-          "description": "SubscriptionQuotaItem properties",
+          "description": "QuotaItem properties",
           "x-ms-client-flatten": true
         }
       },
@@ -10783,7 +10783,7 @@
     },
     "SubscriptionQuotaItemList": {
       "type": "object",
-      "description": "List of Subscription Quota Items",
+      "description": "List of Quota Items",
       "properties": {
         "value": {
           "type": "array",
@@ -10804,7 +10804,7 @@
     },
     "SubscriptionQuotaItemProperties": {
       "type": "object",
-      "description": "SubscriptionQuotaItem Properties",
+      "description": "QuotaItem Properties",
       "properties": {
         "current": {
           "type": "integer",
