--- a/specification/databoxedge/DataBoxEdge.Management/tspconfig.yaml
+++ b/specification/databoxedge/DataBoxEdge.Management/tspconfig.yaml
@@ -1,3 +1,6 @@
+parameters:
+  "service-dir":
+    default: "sdk/databoxedge"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
@@ -9,6 +12,41 @@ options:
     emit-lro-options: "all"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
+  "@azure-tools/typespec-csharp":
+    flavor: azure
+    package-dir: "Azure.ResourceManager.DataBoxEdge"
+    clear-output-folder: true
+    model-namespace: true
+    namespace: "{package-dir}"
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-databoxedge"
+    namespace: "azure.mgmt.databoxedge"
+    generate-test: true
+    generate-sample: true
+    flavor: "azure"
+  "@azure-tools/typespec-java":
+    package-dir: "azure-resourcemanager-databoxedge"
+    namespace: "com.azure.resourcemanager.databoxedge"
+    service-name: "DataBoxEdge" # human-readable service name, whitespace allowed
+    flavor: azure
+  "@azure-tools/typespec-ts":
+    service-dir: sdk/databoxedge
+    package-dir: "arm-databoxedge"
+    is-modular-library: true
+    flavor: "azure"
+    experimental-extensible-enums: true
+    package-details:
+      name: "@azure/arm-databoxedge"
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/databoxedge"
+    package-dir: "armdataboxedge"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    fix-const-stuttering: true
+    flavor: "azure"
+    generate-samples: true
+    generate-fakes: true
+    head-as-boolean: true
+    inject-spans: true
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
