--- a/specification/storage/Storage.Management/tspconfig.yaml
+++ b/specification/storage/Storage.Management/tspconfig.yaml
@@ -42,7 +42,7 @@ options:
     service-dir: "sdk/resourcemanager/storage"
     package-dir: "armstorage"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
-    fix-const-stuttering: true
+    fix-const-stuttering: false
     flavor: "azure"
     generate-samples: true
     generate-fakes: true
