--- a/specification/hybridaks/HybridContainerService.Management/tspconfig.yaml
+++ b/specification/hybridaks/HybridContainerService.Management/tspconfig.yaml
@@ -25,7 +25,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-java":
     flavor: azure
-    package-dir: azure-resourcemanager-hybridcontainerservice
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-hybridcontainerservice"
     namespace: com.azure.resourcemanager.hybridcontainerservice
     service-name: HybridContainerservice
   "@azure-tools/typespec-ts":
@@ -38,7 +38,7 @@ options:
     flavor: azure
     clear-output-folder: true
     model-namespace: false
-    namespace: "Microsoft.HybridContainerService"
+    namespace: "Azure.ResourceManager.HybridContainerService"
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
 linter:
   extends:
