--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
@@ -3507,7 +3507,7 @@
             "pattern": "^([a-z]|(\\d(?!\\d{0,2}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})))([a-z\\d]|(\\.(?!(\\.|-)))|(-(?!\\.))){1,61}[a-z\\d]$"
           },
           {
-            "name": "resource",
+            "name": "body",
             "in": "body",
             "description": "The bucket details including user details, and the volume path that should be mounted inside the bucket.",
             "required": true,
@@ -3613,7 +3613,7 @@
             "pattern": "^([a-z]|(\\d(?!\\d{0,2}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})))([a-z\\d]|(\\.(?!(\\.|-)))|(-(?!\\.))){1,61}[a-z\\d]$"
           },
           {
-            "name": "properties",
+            "name": "body",
             "in": "body",
             "description": "The bucket details including user details, and the volume path that should be mounted inside the bucket.",
             "required": false,
