--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -1227,4 +1227,5 @@
     - translation/data-plane/TextTranslation/tspconfig.yaml
     - trustedsigning/data-plane/TrustedSigning/tspconfig.yaml
     - voiceservices/VoiceServices.Provisioning/tspconfig.yaml
-    - webpubsub/data-plane/WebPubSub
+    - webpubsub/data-plane/WebPubSub/tspconfig.yaml
+    - awsconnector/*/tspconfig.yaml
