--- a/specificationRepositoryConfiguration.json
+++ b/specificationRepositoryConfiguration.json
@@ -23,7 +23,8 @@
     },
     "azure-sdk-for-python": {
       "integrationRepository": "azure-sdk/azure-sdk-for-python",
-      "mainRepository": "Azure/azure-sdk-for-python"
+      "mainRepository": "Azure/azure-sdk-for-python",
+      "mainBranch": "optimize-log-in-pipelnie"
     },
     "azure-powershell": {
       "integrationRepository": "azure-sdk/azure-powershell",
