--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
@@ -3616,7 +3616,7 @@
             "name": "body",
             "in": "body",
             "description": "The bucket details including user details, and the volume path that should be mounted inside the bucket.",
-            "required": false,
+            "required": true,
             "schema": {
               "$ref": "#/definitions/BucketPatch"
             }
@@ -9254,7 +9254,7 @@
           "description": "File System user having access to volume data. For Unix, this is the user's uid and gid. For Windows, this is the user's username. Note that the Unix and Windows user details are mutually exclusive, meaning one or other must be supplied, but not both."
         },
         "provisioningState": {
-          "$ref": "#/definitions/ProvisioningState",
+          "$ref": "#/definitions/NetAppProvisioningState",
           "description": "Provisioning state of the resource",
           "readOnly": true
         },
@@ -9282,7 +9282,7 @@
           "description": "File System user having access to volume data. For Unix, this is the user's uid and gid. For Windows, this is the user's username. Note that the Unix and Windows user details are mutually exclusive, meaning one or other must be supplied, but not both."
         },
         "provisioningState": {
-          "$ref": "#/definitions/ProvisioningState",
+          "$ref": "#/definitions/NetAppProvisioningState",
           "description": "Provisioning state of the resource",
           "readOnly": true
         },
@@ -10682,6 +10682,61 @@
         }
       }
     },
+    "NetAppProvisioningState": {
+      "type": "string",
+      "description": "Gets the status of the VolumeQuotaRule at the time the operation was called.",
+      "enum": [
+        "Accepted",
+        "Creating",
+        "Patching",
+        "Deleting",
+        "Moving",
+        "Failed",
+        "Succeeded"
+      ],
+      "x-ms-enum": {
+        "name": "NetAppProvisioningState",
+        "modelAsString": true,
+        "values": [
+          {
+            "name": "Accepted",
+            "value": "Accepted",
+            "description": "Accepted"
+          },
+          {
+            "name": "Creating",
+            "value": "Creating",
+            "description": "Creating"
+          },
+          {
+            "name": "Patching",
+            "value": "Patching",
+            "description": "Patching"
+          },
+          {
+            "name": "Deleting",
+            "value": "Deleting",
+            "description": "Deleting"
+          },
+          {
+            "name": "Moving",
+            "value": "Moving",
+            "description": "Moving"
+          },
+          {
+            "name": "Failed",
+            "value": "Failed",
+            "description": "Failed"
+          },
+          {
+            "name": "Succeeded",
+            "value": "Succeeded",
+            "description": "Succeeded"
+          }
+        ]
+      },
+      "readOnly": true
+    },
     "NetworkSiblingSet": {
       "type": "object",
       "description": "Describes the contents of a network sibling set.",
@@ -11160,24 +11215,6 @@
         "size",
         "serviceLevel"
       ]
-    },
-    "ProvisioningState": {
-      "type": "string",
-      "description": "Gets the status of the VolumeQuotaRule at the time the operation was called.",
-      "enum": [
-        "Accepted",
-        "Creating",
-        "Patching",
-        "Deleting",
-        "Moving",
-        "Failed",
-        "Succeeded"
-      ],
-      "x-ms-enum": {
-        "name": "ProvisioningState",
-        "modelAsString": false
-      },
-      "readOnly": true
     },
     "QueryNetworkSiblingSetRequest": {
       "type": "object",
@@ -14100,7 +14137,7 @@
       "description": "Volume Quota Rule properties",
       "properties": {
         "provisioningState": {
-          "$ref": "#/definitions/ProvisioningState",
+          "$ref": "#/definitions/NetAppProvisioningState",
           "description": "Gets the status of the VolumeQuotaRule at the time the operation was called.",
           "readOnly": true
         },
