--- a/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
+++ b/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
@@ -40,3 +40,5 @@ linter:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
   disable:
     "@azure-tools/typespec-azure-core/no-openapi": "Suppressed because x-ms-error-response extension is required for proper error response handling"
+    "@azure-tools/typespec-azure-core/documentation-required": "Minimal documentation approach - parameters and union variants are self-explanatory"
+    "@azure-tools/typespec-azure-resource-manager/arm-resource-interface-requires-decorator": "Custom notification session operations do not follow standard ARM resource pattern"
