remove nextLink in ListQuotaReportResponse

--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2025-07-01-preview/netapp.json
@@ -10333,20 +10333,13 @@
       "properties": {
         "value": {
           "type": "array",
-          "description": "The QuotaReport items on this page",
+          "description": "List of quota reports",
           "items": {
             "$ref": "#/definitions/QuotaReport"
-          }
-        },
-        "nextLink": {
-          "type": "string",
-          "format": "uri",
-          "description": "The link to the next page of items"
+          },
+          "x-ms-identifiers": []
         }
-      },
-      "required": [
-        "value"
-      ]
+      }
     },
     "ListReplications": {
       "type": "object",
