--- a/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
@@ -50,7 +50,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azsecrets"
-    containing-module: "github.com/Azure/azure-sdk-for-go/{service-dir}/azsecrets"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/azsecrets"
     override-client-name: "Client"
     single-client: true
     inject-spans: true
