--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -1228,4 +1228,4 @@
     - trustedsigning/data-plane/TrustedSigning/tspconfig.yaml
     - voiceservices/VoiceServices.Provisioning/tspconfig.yaml
     - webpubsub/data-plane/WebPubSub/tspconfig.yaml
-    - awsconnector/*/tspconfig.yaml
+    - awsconnector/**/tspconfig.yaml
