--- a/specification/widget/resource-manager/Microsoft.Widget/Widget/tspconfig.yaml
+++ b/specification/widget/resource-manager/Microsoft.Widget/Widget/tspconfig.yaml
@@ -18,7 +18,7 @@ options:
     model-namespace: true
     namespace: "Azure.ResourceManager.Widget"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-widget"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-widget"
     namespace: "azure.mgmt.widget"
     generate-test: true
     generate-sample: true
