--- a/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.WidgetManager/tspconfig.yaml
@@ -15,7 +15,7 @@ options:
     emitter-output-dir: "{project-root}/.."
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/widgets.json"
   "@azure-tools/typespec-python":
-    package-dir: "azure-contoso-widgetmanager"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-contoso-widgetmanager"
     namespace: "azure.contoso.widgetmanager"
     generate-test: true
     generate-sample: true
