update suppress and tspconfig

--- a/specification/web/Web.Management/tspconfig.yaml
+++ b/specification/web/Web.Management/tspconfig.yaml
@@ -1,3 +1,6 @@
+parameters:
+  "service-dir":
+    default: "sdk/web"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
@@ -8,6 +11,41 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
     emit-lro-options: "all"
     examples-dir: "{project-root}/examples"
+  "@azure-tools/typespec-csharp":
+    flavor: azure
+    package-dir: "Azure.ResourceManager.Web"
+    clear-output-folder: true
+    model-namespace: true
+    namespace: "{package-dir}"
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-web"
+    namespace: "azure.mgmt.web"
+    generate-test: true
+    generate-sample: true
+    flavor: "azure"
+  "@azure-tools/typespec-java":
+    package-dir: "azure-resourcemanager-web"
+    namespace: "com.azure.resourcemanager.web"
+    service-name: "Web" # human-readable service name, whitespace allowed
+    flavor: azure
+  "@azure-tools/typespec-ts":
+    service-dir: sdk/web
+    package-dir: "arm-web"
+    is-modular-library: true
+    flavor: "azure"
+    experimental-extensible-enums: true
+    package-details:
+      name: "@azure/arm-web"
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/web"
+    package-dir: "armweb"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    fix-const-stuttering: true
+    flavor: "azure"
+    generate-samples: true
+    generate-fakes: true
+    head-as-boolean: true
+    inject-spans: true
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
