--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "azure-rest-api-specs",
   "devDependencies": {
+    "@autorest/openapi-to-typespec": "0.11.9",
     "@azure-tools/spec-gen-sdk": "~0.9.1",
     "@azure-tools/specs-shared": "file:.github/shared",
     "@azure-tools/typespec-apiview": "0.7.2",
@@ -12,19 +13,18 @@
     "@azure-tools/typespec-client-generator-cli": "0.28.1",
     "@azure-tools/typespec-client-generator-core": "0.60.0",
     "@azure-tools/typespec-liftr-base": "0.8.0",
-    "@autorest/openapi-to-typespec": "0.11.9",
     "@azure/avocado": "^0.9.1",
-    "@microsoft.azure/openapi-validator": "2.2.4",
+    "@microsoft.azure/openapi-validator": "^1.13.0",
     "@microsoft.azure/openapi-validator-core": "1.0.6",
     "@microsoft.azure/openapi-validator-rulesets": "2.1.7",
     "@typespec/compiler": "1.4.0",
-    "@typespec/http": "1.4.0",
-    "@typespec/sse": "0.74.0",
     "@typespec/events": "0.74.0",
+    "@typespec/http": "1.4.0",
     "@typespec/openapi": "1.4.0",
     "@typespec/openapi3": "1.4.0",
     "@typespec/prettier-plugin-typespec": "1.4.0",
     "@typespec/rest": "0.74.0",
+    "@typespec/sse": "0.74.0",
     "@typespec/streams": "0.74.0",
     "@typespec/versioning": "0.74.0",
     "@typespec/xml": "0.74.0",
