--- a/specification/app/resource-manager/Microsoft.App/preview/2025-10-02-preview/examples/ContainerAppRevisionFunctions_Get.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2025-10-02-preview/examples/ContainerAppRevisionFunctions_Get.json
@@ -15,14 +15,15 @@
         "type": "Microsoft.App/containerApps/revisions/functions",
         "location": "East US",
         "properties": {
-          "revisionName": "myContainerApp-abc123",
           "name": "HttpExample",
-          "invokeUrl": "https://mycontainerapp.example-region.azurecontainerapps.io/api/HttpExample",
+          "invokeUrlTemplate": "https://mycontainerapp.example-region.azurecontainerapps.io/api/HttpExample",
           "triggerType": "httpTrigger",
           "language": "dotnet-isolated",
           "isDisabled": false
         }
       }
-    }
+    },
+    "400": {},
+    "404": {}
   }
 }
