java backward compatible

--- a/specification/recoveryservicesbackup/RecoveryServices.Management/tspconfig.yaml
+++ b/specification/recoveryservicesbackup/RecoveryServices.Management/tspconfig.yaml
@@ -27,8 +27,9 @@ options:
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-recoveryservicesbackup"
     namespace: "com.azure.resourcemanager.recoveryservicesbackup"
-    service-name: "Azure Resource Manager RecoveryServicesBackup"
+    service-name: "Recovery Services Backup"
     flavor: azure
+    use-object-for-unknown: true
   "@azure-tools/typespec-ts":
     package-dir: "arm-recoveryservicesbackup"
     flavor: azure
