java backward compatible

--- a/specification/quota/Quota.Management/tspconfig.yaml
+++ b/specification/quota/Quota.Management/tspconfig.yaml
@@ -26,8 +26,9 @@ options:
   "@azure-tools/typespec-java":
     package-dir: "azure-resourcemanager-quota"
     namespace: "com.azure.resourcemanager.quota"
-    service-name: "Quota" # human-readable service name, whitespace allowed
+    service-name: "Quota"
     flavor: azure
+    use-object-for-unknown: true
   "@azure-tools/typespec-ts":
     package-dir: "arm-quota"
     flavor: azure
