syncing all changes

--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-09-15-preview/deploymentSettings.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-09-15-preview/deploymentSettings.json
@@ -617,6 +617,7 @@
             "UseDnsServer",
             "UseForwarder"
           ],
+          "default": "UseDnsServer",
           "x-ms-enum": {
             "name": "DnsServerConfig",
             "modelAsString": true,
