--- a/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-09-15-preview/examples/PutDeploymentSettingsWithADLess.json
+++ b/specification/azurestackhci/resource-manager/Microsoft.AzureStackHCI/StackHCI/preview/2025-09-15-preview/examples/PutDeploymentSettingsWithADLess.json
@@ -252,6 +252,7 @@
                           "endingAddress": "10.57.48.66"
                         }
                       ],
+                      "dnsServerConfig": "UseDnsServer",
                       "dnsServers": [
                         "10.57.50.90"
                       ]
@@ -529,6 +530,7 @@
                           "endingAddress": "10.57.48.66"
                         }
                       ],
+                      "dnsServerConfig": "UseDnsServer",
                       "dnsServers": [
                         "10.57.50.90"
                       ]
